# ansys-api-tools-filetransfer

./: .pre-commit-config.yaml  AUTHORS  CONTRIBUTORS.md  LICENSE  README.md  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
ansys/api/utilities/filetransfer/v0/: file_transfer_service.proto
ansys/api/utilities/filetransfer/v1/: file_transfer_service.proto
src/: CMakeLists.txt
src/ansys/api/tools/filetransfer/: __init__.py
src/ansys/api/tools/filetransfer/v1/: file_transfer_service.proto
src/ansys/api/utilities/filetransfer/: __init__.py
src/ansys/api/utilities/filetransfer/v1/: file_transfer_service.proto
